# raft

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
client/: Cargo.toml  build.rs
client/src/: main.rs
interactive/: Cargo.toml  build.rs
interactive/src/: client.rs  dto.rs  main.rs  server.rs
interactive/templates/: index.html  script.js
schema/: raft.capnp  storage.capnp
src/: client.rs  concensus.rs  consensus.rs  dto.rs  main.rs  node.rs  peers.rs  server.rs  state.rs  storage.rs
src/server/: commands.rs  mod.rs  raft.rs
visual/: Cargo.toml
visual/src/: main.rs
visual/templates/: index.html  script.js
