[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.20.3"
capnp-rpc = "0.20.3"
futures = "0.3.0"
tokio = { version = "1.0.0", features = ["net", "rt", "macros", "time", "rt-multi-thread"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[build-dependencies]
capnpc = "0.20.1"
