[package]
name = "raft"
version = "0.1.0"
edition = "2021"

[dependencies]
capnp = "0.20.3"
capnp-rpc = "0.20.3"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.0"
rand = "0.9.0"
tokio = { version = "1.4.0", features = ["net", "rt", "macros", "time", "rt-multi-thread", "sync", "io-util", "fs"]}
tokio-util = { version = "0.7.4", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }

[build-dependencies]
capnpc = "0.20.1"
