[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
capnp = "0.20.3"
capnp-rpc = "0.20.3"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.0"
rand = "0.9.0"
tokio = { version = "1.4.0", features = ["net", "rt", "macros", "time", "rt-multi-thread", "sync"]}
tokio-util = { version = "0.7.4", features = ["compat"] }

[build-dependencies]
capnpc = "0.20.1"
